# zarobot

./: .dockerignore  .env.example  .env.new.example  .gitignore  .windsurfrules  ARCHITECTURE.md  ARCHITECTURE_SCALABLE.md  DATABASE_SETUP.md  DEBUG_RESULTS.md  DEMO_QUICKSTART.md  DEMO_SUCCESS.md  Dockerfile  MVP_CLEANUP_REPORT.md  MVP_DOCUMENTATION.md  MVP_READINESS_REPORT.md  PRD_ZERO_BOT.md  PRD_ZERO_BOT_MVP.md  README.md  READY_FOR_DEMO.md  SKILLS_IMPLEMENTATION_SUMMARY.md  SKILL_CREATION_FLOW.md  TASK_MASTER_INSTRUCTIONS.md  TASK_MASTER_SETUP.md  TECHNICAL_ARCHITECTURE.md  ZERO_BOT_MVP_ROADMAP.md  create_demo_skills.py  db.sqlite3  demo_api_test.py  docker-compose.new.yml  docker-compose.override.yml  docker-compose.scalable.yml  docker-compose.yml  ia_mother_session.session  manage.py  package-lock.json  package.json  requirements.txt  run_both_bots.sh  run_demo.py  run_local_bots.sh  (+9 more)
.cursor/: mcp.json
.taskmaster/: config.json
.taskmaster/reports/: task-complexity-report.json
apps/bot_core/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/bot_factory/: apps.py  (+7 more)
blockchain/: __init__.py  base.py
config/: environment.example  settings.py  tokenomics.py
core/: data_isolation.py  middleware.py  models.py  serializers.py  settings.py  urls.py  views.py
docs/: DEVELOPER_GUIDE.md  PERSONALITY_IA.md
scripts/: check_personality_ia.py  mongo-init.js  prd.txt
sdk/: pyproject.toml
sdk/zero_bot_sdk/: __init__.py  base_personality.py  base_skill.py  cli.py  cli_templates.py  context.py  response.py  testing.py
(+91 files in other folders)
