[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zero-bot-sdk"
version = "0.1.0"
description = "SDK for building skills and personalities for Zero Bot platform"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Zero Bot Team" },
]
keywords = ["telegram", "bot", "ai", "skills", "tamagotchi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon>=1.33",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "jsonschema>=4.20",
    "click>=8.1",
    "jinja2>=3.1",
]

[project.scripts]
zero-bot-sdk = "zero_bot_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["zero_bot_sdk"]
